--- a/Resturant Reviewer/BL/BL.csproj
+++ b/Resturant Reviewer/BL/BL.csproj
@@ -4,6 +4,12 @@
     <ProjectReference Include="..\DL\DL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SeriLog" Version="2.10.0" />
+    <PackageReference Include="SeriLog.sinks.console" Version="4.0.0" />
+    <PackageReference Include="SeriLog.sinks.file" Version="5.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
